big layout update #2: * add responsive styles * fix hint position for desktops * fix double scroll * fix pizdec v layoute, kogda vse sdvigalosj

--- a/index.css
+++ b/index.css
@@ -62,7 +62,6 @@ body.show-dialog {
 
 .title-block .title {
     font-weight: 400;
-    font-size: 48px;
     color: var(--game-title-color);
     user-select: none;
     display: flex;
@@ -97,10 +96,9 @@ body.show-dialog {
     opacity: 1;
     transition: 0.2s ease-in;
     padding: 12px;
-    width: 600px;
-    position: absolute;
+    position: fixed;
     z-index: 100;
-    background: #1515159c;
+    background: rgba(21, 21, 21, 0.85);
     border: 1px solid var(--dialog-border);
 }
 .no-anim {
@@ -154,10 +152,6 @@ body.show-dialog {
     overflow: hidden;
     height: 100vh;
     cursor: grab;
-    width: calc(100% - 108px);
-    padding: 50px;
-    padding-left: 600px;
-    padding-right: 600px;
 }
 
 .pop {
@@ -226,11 +220,11 @@ body.show-dialog {
     height: 50px;
     border: 1px solid #8d549c;
     display: flex;
-    top: 60px;
+    top: 40%;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     z-index: 1000;
     transition: 0.1s ease-in;
 }
@@ -257,7 +251,6 @@ body.show-dialog {
 .game-rules {
     color: var(--main-text-color);
     overflow-y: auto;
-    max-height: 600px;
 }
 .game-rules ul {
     padding: 24px;
@@ -636,7 +629,6 @@ polygon.base-tile:hover {
 
 .header {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     position: relative;
 }
@@ -688,7 +680,6 @@ footer .authorship-text {
 
 .game-title {
     font-weight: 400;
-    font-size: 82px;
     color: var(--game-title-color);
     user-select: none;
 }
@@ -739,8 +730,7 @@ footer .authorship-text {
     .game-wrapper {
         display: flex;
         justify-content: center;
-        overflow: auto;
-        overflow-x: hidden;
+        overflow: hidden;
     }
 
     .stats-block {
